--- a/submit.html
+++ b/submit.html
@@ -8,7 +8,7 @@
   </head>
   <body> 
       <h1>submit html</h1>
-    <form action="form.html" >   
+    <form action="index.html" >   
  <img src="https://media4.giphy.com/media/42qTxnekKaXizqJdHD/giphy.gif?cid=ecf05e4755118a5247f383de6de0d1e59aee58981c772066&rid=giphy.gif&ct=g" alt="dance" width="300" height="300">
  <br> <br>
     <input type="submit"  value="back"/>
